--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A quick bootstraping dashboard",
   "main": "index.html",
   "dependencies": {
-    "@polight/lego": "^1.2.1"
+    "@polight/lego": "^1.3.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "concurrently 'npm run watch' 'live-server --no-browser'",
     "watch": "npm run build -- -w",
-    "build": "lego bricks dist",
+    "build": "LEGO_URL=/node_modules/@polight/lego/dist/lego.min.js lego bricks dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
